# Ascedit

./: .gitmodules  CMakeLists.txt  Doxyfile.in
cmake/: misc.cmake  qt.cmake  testing.cmake
src/: CMakeLists.txt  main.cpp
src/color/: color.hpp  cute_color.cpp  cute_color.hpp
src/document/: layer.hpp
test/: CMakeLists.txt  test_color.cpp  test_cute_color.cpp  test_document.cpp
